--- a/phoneguard/Base.lproj/Main.storyboard
+++ b/phoneguard/Base.lproj/Main.storyboard
@@ -1955,9 +1955,6 @@ Cg
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="stillness.png" translatesAutoresizingMaskIntoConstraints="NO" id="1Na-Ub-Wfc">
                                 <rect key="frame" x="38" y="143" width="32" height="32"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="32" id="Pso-CQ-bce"/>
-                                </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="充电场景" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YaA-E3-EHB">
                                 <rect key="frame" x="92" y="229" width="125" height="50"/>
@@ -1980,47 +1977,78 @@ Cg
                                 <color key="textColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LvD-7f-5MN">
+                                <rect key="frame" x="92" y="278" width="223" height="21"/>
+                                <fontDescription key="fontDescription" name="PingFangSC-Thin" family="PingFang SC" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3DL-Py-Lsb">
+                                <rect key="frame" x="92" y="183" width="238" height="21"/>
+                                <fontDescription key="fontDescription" name="PingFangSC-Thin" family="PingFang SC" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u70-tl-Hep">
+                                <rect key="frame" x="92" y="370" width="238" height="21"/>
+                                <fontDescription key="fontDescription" name="PingFangSC-Thin" family="PingFang SC" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="FpC-ys-hwD" firstAttribute="trailing" secondItem="bph-Ec-M8I" secondAttribute="trailing" id="0pD-5U-obJ"/>
-                            <constraint firstItem="1Na-Ub-Wfc" firstAttribute="bottom" secondItem="Ebf-bT-tq2" secondAttribute="bottom" id="7Ww-Kg-Aeo"/>
-                            <constraint firstItem="1Na-Ub-Wfc" firstAttribute="centerY" secondItem="4xb-bg-7i9" secondAttribute="centerY" id="8ux-6j-RQz"/>
-                            <constraint firstItem="Ebf-bT-tq2" firstAttribute="leading" secondItem="4xb-bg-7i9" secondAttribute="trailing" constant="81" id="ABg-gf-hrY"/>
-                            <constraint firstItem="Ebf-bT-tq2" firstAttribute="leading" secondItem="UTQ-tA-LK2" secondAttribute="leading" id="Dv0-ha-t79"/>
-                            <constraint firstItem="bph-Ec-M8I" firstAttribute="top" secondItem="FpC-ys-hwD" secondAttribute="bottom" constant="60" id="IjP-DV-h9d"/>
-                            <constraint firstItem="bph-Ec-M8I" firstAttribute="centerY" secondItem="4wc-9A-hs6" secondAttribute="centerY" id="Jap-ci-tqd"/>
-                            <constraint firstItem="4wc-9A-hs6" firstAttribute="top" secondItem="YaA-E3-EHB" secondAttribute="bottom" constant="42" id="Kca-73-E5f"/>
-                            <constraint firstItem="4wc-9A-hs6" firstAttribute="centerY" secondItem="x7f-Br-8Nn" secondAttribute="centerY" id="PUc-ig-hsj"/>
-                            <constraint firstItem="YaA-E3-EHB" firstAttribute="leading" secondItem="4wc-9A-hs6" secondAttribute="leading" id="SUD-v9-Nbx"/>
-                            <constraint firstItem="FpC-ys-hwD" firstAttribute="bottom" secondItem="UTQ-tA-LK2" secondAttribute="bottom" id="TaS-bi-bGS"/>
-                            <constraint firstItem="YaA-E3-EHB" firstAttribute="trailing" secondItem="4wc-9A-hs6" secondAttribute="trailing" id="Tal-O4-YtB"/>
-                            <constraint firstItem="FpC-ys-hwD" firstAttribute="centerY" secondItem="YaA-E3-EHB" secondAttribute="centerY" id="Vii-l7-Ld7"/>
-                            <constraint firstItem="FpC-ys-hwD" firstAttribute="top" secondItem="1Na-Ub-Wfc" secondAttribute="bottom" constant="63" id="X37-T5-Cz4"/>
-                            <constraint firstItem="1Na-Ub-Wfc" firstAttribute="leading" secondItem="qna-Nb-ay4" secondAttribute="leadingMargin" constant="22" id="YBq-xs-Dkl"/>
-                            <constraint firstItem="4xb-bg-7i9" firstAttribute="top" secondItem="S1B-rf-qeF" secondAttribute="bottom" constant="70" id="eXQ-VL-CBZ"/>
-                            <constraint firstItem="4xb-bg-7i9" firstAttribute="trailing" secondItem="YaA-E3-EHB" secondAttribute="trailing" id="fGJ-Cc-Lq7"/>
-                            <constraint firstItem="YaA-E3-EHB" firstAttribute="top" secondItem="4xb-bg-7i9" secondAttribute="bottom" constant="45" id="g2r-Aj-2DC"/>
-                            <constraint firstItem="FpC-ys-hwD" firstAttribute="leading" secondItem="bph-Ec-M8I" secondAttribute="leading" id="iF1-Ua-qjx"/>
-                            <constraint firstItem="UTQ-tA-LK2" firstAttribute="leading" secondItem="x7f-Br-8Nn" secondAttribute="leading" id="iem-LI-v9Z"/>
-                            <constraint firstItem="4xb-bg-7i9" firstAttribute="leading" secondItem="YaA-E3-EHB" secondAttribute="leading" id="jck-Gc-wsF"/>
-                            <constraint firstItem="1Na-Ub-Wfc" firstAttribute="top" secondItem="S1B-rf-qeF" secondAttribute="bottom" constant="79" id="nSP-bV-lNs"/>
-                            <constraint firstItem="4xb-bg-7i9" firstAttribute="leading" secondItem="1Na-Ub-Wfc" secondAttribute="trailing" constant="22" id="xgH-Un-k2T"/>
-                            <constraint firstItem="bph-Ec-M8I" firstAttribute="bottom" secondItem="x7f-Br-8Nn" secondAttribute="bottom" id="yNR-YS-Uie"/>
-                            <constraint firstItem="1Na-Ub-Wfc" firstAttribute="leading" secondItem="FpC-ys-hwD" secondAttribute="leading" id="zFV-tF-EBj"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="Ebf-bT-tq2" secondAttribute="trailing" constant="12" id="zwo-uH-mJM"/>
+                            <constraint firstItem="4xb-bg-7i9" firstAttribute="top" secondItem="S1B-rf-qeF" secondAttribute="bottom" constant="70" id="093-NV-t4i"/>
+                            <constraint firstItem="u70-tl-Hep" firstAttribute="top" secondItem="x7f-Br-8Nn" secondAttribute="bottom" constant="8" id="0Hi-s4-v4x"/>
+                            <constraint firstItem="1Na-Ub-Wfc" firstAttribute="centerY" secondItem="4xb-bg-7i9" secondAttribute="centerY" id="3qv-Mx-bJb"/>
+                            <constraint firstItem="3DL-Py-Lsb" firstAttribute="leading" secondItem="qna-Nb-ay4" secondAttribute="leadingMargin" constant="76" id="8OO-xK-Yjh"/>
+                            <constraint firstItem="4xb-bg-7i9" firstAttribute="leading" secondItem="3DL-Py-Lsb" secondAttribute="leading" id="AHG-0I-8js"/>
+                            <constraint firstItem="FpC-ys-hwD" firstAttribute="centerY" secondItem="YaA-E3-EHB" secondAttribute="centerY" id="Bjd-g9-KY3"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="3DL-Py-Lsb" secondAttribute="trailing" constant="29" id="Fjy-hs-wzU"/>
+                            <constraint firstItem="4xb-bg-7i9" firstAttribute="trailing" secondItem="YaA-E3-EHB" secondAttribute="trailing" id="HJX-s3-fxI"/>
+                            <constraint firstItem="bph-Ec-M8I" firstAttribute="bottom" secondItem="x7f-Br-8Nn" secondAttribute="bottom" id="JhG-h0-Bw7"/>
+                            <constraint firstItem="YaA-E3-EHB" firstAttribute="leading" secondItem="LvD-7f-5MN" secondAttribute="leading" id="K4f-SP-HIw"/>
+                            <constraint firstItem="UTQ-tA-LK2" firstAttribute="leading" secondItem="x7f-Br-8Nn" secondAttribute="leading" id="NEC-xV-wq7"/>
+                            <constraint firstItem="x7f-Br-8Nn" firstAttribute="top" secondItem="LvD-7f-5MN" secondAttribute="bottom" constant="32" id="PvN-Mi-trS"/>
+                            <constraint firstItem="4wc-9A-hs6" firstAttribute="centerY" secondItem="x7f-Br-8Nn" secondAttribute="centerY" id="QLL-Ja-sma"/>
+                            <constraint firstItem="1Na-Ub-Wfc" firstAttribute="leading" secondItem="FpC-ys-hwD" secondAttribute="leading" id="SVp-0r-CjN"/>
+                            <constraint firstItem="4wc-9A-hs6" firstAttribute="leading" secondItem="u70-tl-Hep" secondAttribute="leading" id="WNh-WG-Ifd"/>
+                            <constraint firstItem="1UR-6z-Oh0" firstAttribute="top" secondItem="u70-tl-Hep" secondAttribute="bottom" constant="227" id="WiK-gP-ait"/>
+                            <constraint firstItem="3DL-Py-Lsb" firstAttribute="leading" secondItem="YaA-E3-EHB" secondAttribute="leading" id="YXL-bF-g60"/>
+                            <constraint firstItem="1Na-Ub-Wfc" firstAttribute="bottom" secondItem="Ebf-bT-tq2" secondAttribute="bottom" id="ZZQ-xn-e77"/>
+                            <constraint firstItem="4wc-9A-hs6" firstAttribute="top" secondItem="LvD-7f-5MN" secondAttribute="bottom" constant="22" id="cab-OP-PfG"/>
+                            <constraint firstItem="LvD-7f-5MN" firstAttribute="leading" secondItem="4wc-9A-hs6" secondAttribute="leading" id="eIm-V2-gZK"/>
+                            <constraint firstItem="YaA-E3-EHB" firstAttribute="top" secondItem="4xb-bg-7i9" secondAttribute="bottom" constant="45" id="esO-Ue-etg"/>
+                            <constraint firstItem="3DL-Py-Lsb" firstAttribute="top" secondItem="Ebf-bT-tq2" secondAttribute="bottom" constant="8" symbolic="YES" id="fGs-p7-d67"/>
+                            <constraint firstItem="FpC-ys-hwD" firstAttribute="top" secondItem="1Na-Ub-Wfc" secondAttribute="bottom" constant="63" id="gYm-Kr-YgN"/>
+                            <constraint firstItem="Ebf-bT-tq2" firstAttribute="leading" secondItem="UTQ-tA-LK2" secondAttribute="leading" id="iGr-Ew-YwB"/>
+                            <constraint firstItem="FpC-ys-hwD" firstAttribute="leading" secondItem="bph-Ec-M8I" secondAttribute="leading" id="ihg-DO-Bt0"/>
+                            <constraint firstItem="YaA-E3-EHB" firstAttribute="top" secondItem="3DL-Py-Lsb" secondAttribute="bottom" constant="25" id="kXe-uK-nVt"/>
+                            <constraint firstItem="Ebf-bT-tq2" firstAttribute="leading" secondItem="4xb-bg-7i9" secondAttribute="trailing" constant="81" id="mCK-Oh-21y"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="LvD-7f-5MN" secondAttribute="trailing" constant="44" id="o0V-D5-TNu"/>
+                            <constraint firstItem="4xb-bg-7i9" firstAttribute="leading" secondItem="1Na-Ub-Wfc" secondAttribute="trailing" constant="22" id="qHI-xo-dPi"/>
+                            <constraint firstItem="3DL-Py-Lsb" firstAttribute="trailing" secondItem="u70-tl-Hep" secondAttribute="trailing" id="rp2-Nc-tVh"/>
+                            <constraint firstItem="FpC-ys-hwD" firstAttribute="bottom" secondItem="UTQ-tA-LK2" secondAttribute="bottom" id="sTZ-Zx-KQ7"/>
+                            <constraint firstItem="UTQ-tA-LK2" firstAttribute="top" secondItem="3DL-Py-Lsb" secondAttribute="bottom" constant="35" id="sVn-gX-ZB5"/>
+                            <constraint firstItem="4wc-9A-hs6" firstAttribute="top" secondItem="YaA-E3-EHB" secondAttribute="bottom" constant="42" id="tNH-wX-lRu"/>
+                            <constraint firstItem="YaA-E3-EHB" firstAttribute="trailing" secondItem="4wc-9A-hs6" secondAttribute="trailing" id="vwe-iL-epf"/>
+                            <constraint firstItem="LvD-7f-5MN" firstAttribute="top" secondItem="UTQ-tA-LK2" secondAttribute="bottom" constant="8" symbolic="YES" id="x8L-6p-EGe"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Ebf-bT-tq2" secondAttribute="trailing" constant="12" id="xCT-xf-ZCo"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="其它场景" id="DCB-Yh-Ev8"/>
                     <connections>
                         <outlet property="chargingSwitch" destination="UTQ-tA-LK2" id="QhU-KZ-goP"/>
+                        <outlet property="chargingText" destination="LvD-7f-5MN" id="I0N-ky-zYL"/>
                         <outlet property="headSetSwitch" destination="x7f-Br-8Nn" id="n3d-3f-xbt"/>
+                        <outlet property="headsetText" destination="u70-tl-Hep" id="dh0-RH-wqz"/>
                         <outlet property="stillnessSwitch" destination="Ebf-bT-tq2" id="M4f-l5-fBU"/>
+                        <outlet property="stillnessText" destination="3DL-Py-Lsb" id="AM1-0v-bai"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7Br-eR-rIn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-4657" y="385"/>
+            <point key="canvasLocation" x="-4658.3999999999996" y="384.55772113943033"/>
         </scene>
         <!--License View Controller-->
         <scene sceneID="CBt-BS-fh3">
